--- a/styles.css
+++ b/styles.css
@@ -80,11 +80,15 @@ body {
   background-color: #3d8168;
   border: none;
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .product-card__button:hover {
   background-color: #1a4031;
-  cursor: pointer;
+}
+
+.product-card__button:active {
+  background-color: #122c22;
 }
 
 .product-card__button > img {
